[package]
name = "prost_test"
version = "0.1.0"
authors = ["Tupshin Harper <tupshin@tupshin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.7.0"

[build-dependencies]
prost-build = "0.7.0"

